force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/SVMXA360__CONF_LayoutRelatedSection__c.object-meta.xml
<CustomObject>
    <description>Stores the related object tab info.</description>
    <label>Layout Related Section</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layout Related Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>