force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__AllowDelete__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AllowDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True, it allows to delete existing lines.</description>
    <label>Allow Delete</label>
    <type>Checkbox</type>
</CustomField>