force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__AllowNew__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AllowNew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True, it allows to add new lines.</description>
    <label>Allow New</label>
    <type>Checkbox</type>
</CustomField>