force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__AllowZeroLines__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AllowZeroLines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Grid allowed to have zero lines?</description>
    <label>Allow Zero Lines</label>
    <type>Checkbox</type>
</CustomField>