force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__ApplyValueMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplyValueMapping__c</fullName>
    <description>Field to store value on when the mapping to be applied for transaction child. The values are Always/Conditional</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Apply Value Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>