force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__ControllerReferenceField__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ControllerReferenceField__c</fullName>
    <description>Lookup to header object field name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Controller Reference Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>