force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__ExtendedEditDisplayColumns__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExtendedEditDisplayColumns__c</fullName>
    <description>Stores the value of the number of columns to be displayed in the extended edit display for detail lines. Values can be either 1 or 2.</description>
    <label>Extended Edit Display Columns</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>