force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to field mapping that will be applied to the related object during runtime.</description>
    <label>Field Mapping</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Layout Related Sections</relationshipLabel>
    <relationshipName>Layout_Related_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>