force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__IsSelectable__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsSelectable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the detail lines to be selectable with the checkbox option.</description>
    <label>Selectable Grid</label>
    <type>Checkbox</type>
</CustomField>