force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__Layout__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Layout__c</fullName>
    <description>If set to true, the field is read-only on the layout.</description>
    <label>Layout</label>
    <referenceTo>SVMXA360__CONF_Layout__c</referenceTo>
    <relationshipName>RelatedSections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>