force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__MultiAddSearchFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MultiAddSearchFieldApiName__c</fullName>
    <description>Lookup field based on which multi add search will be enabled</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Multi Add Search Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>