force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>Related object API name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>