force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__PresentationType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PresentationType__c</fullName>
    <description>Presentation type of the object records that can be Grid or Section view.</description>
    <label>Presentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>