force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__QualifyingCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__QualifyingCriteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an Expression that will be applied to the related objects during runtime.</description>
    <label>Qualifying Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Layout Related Sections</relationshipLabel>
    <relationshipName>Layout_Related_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>