force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__SortBy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SortBy__c</fullName>
    <description>Grid should be sorted by this field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sort By</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>