force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__SourceControllerReferenceField__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceControllerReferenceField__c</fullName>
    <description>Stores Lookup field API name for Source header object.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Controller Reference Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>