force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__SourceObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceObjectAPIName__c</fullName>
    <description>API name of the source object configured.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>