force-app/main/default/objects/SVMXA360__CONF_LayoutRelatedSection__c/fields/SVMXA360__ValueMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ValueMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to value mapping that will be applied to the related object during runtime.</description>
    <label>Value Mapping</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Layout Related Sections (Value Mapping)</relationshipLabel>
    <relationshipName>Layout_Related_Sections1</relationshipName>
    <type>Lookup</type>
</CustomField>